[package]
name = "libhydrogen"
version = "0.3.0"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A modern and easy to use cryptography library"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-libhydrogen"
repository = "https://github.com/jedisct1/rust-libhydrogen"
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
libhydrogen-sys = "0.8.1"
