[package]
name = "libhydrogen"
version = "0.4.2"
authors = ["Frank Denis <github@pureftpd.org>"]
description = "A modern and easy to use cryptography library"
license = "ISC"
homepage = "https://github.com/jedisct1/rust-libhydrogen"
repository = "https://github.com/jedisct1/rust-libhydrogen"
edition = "2018"

[dependencies]
anyhow = "1.0"
thiserror = "2.0"
libhydrogen-sys = "0.9"
